{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 584,
  "lineage": "e3826044-7a86-985d-200e-fbadd31674dc",
  "resources": [
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c3d5c16a2fb7f7e",
            "arn": "arn:aws:ec2:us-west-2:640109666574:elastic-ip/eipalloc-04c3d5c16a2fb7f7e",
            "domain": "vpc",
            "id": "eipalloc-04c3d5c16a2fb7f7e",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-237-19-28.us-west-2.compute.amazonaws.com",
            "public_ip": "44.237.19.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_TERRAFORM"
            },
            "tags_all": {
              "Name": "EIP_TERRAFORM"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8c6b923777519db",
            "arn": "arn:aws:ec2:us-west-2:640109666574:instance/i-063aae545d1601796",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063aae545d1601796",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DockerOregon",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00028f5becb3df8fd",
            "private_dns": "ip-172-16-11-23.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.11.23",
            "public_dns": "ec2-34-215-149-33.us-west-2.compute.amazonaws.com",
            "public_ip": "34.215.149.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0029f80b3a1a367a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078d614c7c35fe8b2",
            "tags": {
              "Name": "bastion-server"
            },
            "tags_all": {
              "Name": "bastion-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a17992916c70494"
            ]
          },
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.bastion_security_group",
            "module.deploy_kubernetes_infraestructure.aws_subnet.publicsunet",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc",
            "module.deploy_kubernetes_infraestructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8c6b923777519db",
            "arn": "arn:aws:ec2:us-west-2:640109666574:instance/i-0d031c9a4385f321f",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d031c9a4385f321f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "DockerOregon",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d7a9b2c85a04a758",
            "private_dns": "ip-172-16-28-21.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.28.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-074821be63df2b86b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac01f53aec2fed61",
            "tags": {
              "Name": "master-node-1"
            },
            "tags_all": {
              "Name": "master-node-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00cf43d60646f220a"
            ]
          },
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_subnet.privatesubnet",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc",
            "module.deploy_kubernetes_infraestructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8c6b923777519db",
            "arn": "arn:aws:ec2:us-west-2:640109666574:instance/i-00ff952b23abd6400",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ff952b23abd6400",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "DockerOregon",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f67a5240e571e73",
            "private_dns": "ip-172-16-19-209.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.19.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-028a61eb6a2e9eea5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac01f53aec2fed61",
            "tags": {
              "Name": "worker-node-1"
            },
            "tags_all": {
              "Name": "worker-node-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-032395c8253214a0e"
            ]
          },
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.worker_nodes_security_group",
            "module.deploy_kubernetes_infraestructure.aws_subnet.privatesubnet",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc",
            "module.deploy_kubernetes_infraestructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640109666574:internet-gateway/igw-08890a3f2ac458663",
            "id": "igw-08890a3f2ac458663",
            "owner_id": "640109666574",
            "tags": {
              "Name": "igw_terraform"
            },
            "tags_all": {
              "Name": "igw_terraform"
            },
            "vpc_id": "vpc-06b98c1cea77c0466"
          },
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c3d5c16a2fb7f7e",
            "association_id": "eipassoc-074bff6e6e6a1c79c",
            "connectivity_type": "public",
            "id": "nat-0321a29c9b13d95c6",
            "network_interface_id": "eni-04e5d2fcf5b72544e",
            "private_ip": "172.16.6.25",
            "public_ip": "44.237.19.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-078d614c7c35fe8b2",
            "tags": {
              "Name": "NATGATEWAY_TERRAFORM"
            },
            "tags_all": {
              "Name": "NATGATEWAY_TERRAFORM"
            }
          },
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_eip.eip_nat_terraform",
            "module.deploy_kubernetes_infraestructure.aws_internet_gateway.igw",
            "module.deploy_kubernetes_infraestructure.aws_subnet.publicsunet",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc",
            "module.deploy_kubernetes_infraestructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640109666574:route-table/rtb-044796c623ba30f87",
            "id": "rtb-044796c623ba30f87",
            "owner_id": "640109666574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0321a29c9b13d95c6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetable_private_terraform"
            },
            "tags_all": {
              "Name": "routetable_private_terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b98c1cea77c0466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_eip.eip_nat_terraform",
            "module.deploy_kubernetes_infraestructure.aws_internet_gateway.igw",
            "module.deploy_kubernetes_infraestructure.aws_nat_gateway.natgw_terraform",
            "module.deploy_kubernetes_infraestructure.aws_subnet.privatesubnet",
            "module.deploy_kubernetes_infraestructure.aws_subnet.publicsunet",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc",
            "module.deploy_kubernetes_infraestructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640109666574:route-table/rtb-028fb20e5498f54c3",
            "id": "rtb-028fb20e5498f54c3",
            "owner_id": "640109666574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08890a3f2ac458663",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetable_public_terraform"
            },
            "tags_all": {
              "Name": "routetable_public_terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b98c1cea77c0466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_internet_gateway.igw",
            "module.deploy_kubernetes_infraestructure.aws_subnet.publicsunet",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc",
            "module.deploy_kubernetes_infraestructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "toprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c076c105f2c46717",
            "route_table_id": "rtb-044796c623ba30f87",
            "subnet_id": "subnet-0ac01f53aec2fed61"
          },
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_eip.eip_nat_terraform",
            "module.deploy_kubernetes_infraestructure.aws_internet_gateway.igw",
            "module.deploy_kubernetes_infraestructure.aws_nat_gateway.natgw_terraform",
            "module.deploy_kubernetes_infraestructure.aws_route_table.private",
            "module.deploy_kubernetes_infraestructure.aws_subnet.privatesubnet",
            "module.deploy_kubernetes_infraestructure.aws_subnet.publicsunet",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc",
            "module.deploy_kubernetes_infraestructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "topublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05788cf81eb906785",
            "route_table_id": "rtb-028fb20e5498f54c3",
            "subnet_id": "subnet-078d614c7c35fe8b2"
          },
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_internet_gateway.igw",
            "module.deploy_kubernetes_infraestructure.aws_route_table.public",
            "module.deploy_kubernetes_infraestructure.aws_subnet.publicsunet",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc",
            "module.deploy_kubernetes_infraestructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640109666574:security-group/sg-01a17992916c70494",
            "description": "Grupo de seguridad establecido para el Bastion",
            "egress": [],
            "id": "sg-01a17992916c70494",
            "ingress": [],
            "name": "BastionSG",
            "name_prefix": "",
            "owner_id": "640109666574",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06b98c1cea77c0466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_node_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640109666574:security-group/sg-00cf43d60646f220a",
            "description": "Grupo de seguridad configurado para el servidor principal",
            "egress": [],
            "id": "sg-00cf43d60646f220a",
            "ingress": [],
            "name": "master-node-security-group",
            "name_prefix": "",
            "owner_id": "640109666574",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06b98c1cea77c0466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_nodes_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640109666574:security-group/sg-032395c8253214a0e",
            "description": "Grupo de seguridad configurado para el servidor principal",
            "egress": [],
            "id": "sg-032395c8253214a0e",
            "ingress": [],
            "name": "worker-node-security-group",
            "name_prefix": "",
            "owner_id": "640109666574",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06b98c1cea77c0466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Kubelet-API",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kubelet API",
            "from_port": 10250,
            "id": "sgrule-290375187",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf43d60646f220a",
            "security_group_rule_id": "sgr-077e6c757181df804",
            "self": false,
            "source_security_group_id": "sg-00cf43d60646f220a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Kubernetes-API-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Kubernetes Api Server",
            "from_port": 6443,
            "id": "sgrule-1349677889",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf43d60646f220a",
            "security_group_rule_id": "sgr-0ef6c56f14eb59631",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-ssh-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH from bastion",
            "from_port": 22,
            "id": "sgrule-296692531",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-032395c8253214a0e",
            "security_group_rule_id": "sgr-03232e44d7f98515a",
            "self": false,
            "source_security_group_id": "sg-01a17992916c70494",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.bastion_security_group",
            "module.deploy_kubernetes_infraestructure.aws_security_group.worker_nodes_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_security_group_rule_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.16.0.0/16"
            ],
            "description": "Bastion Server to kubernetes",
            "from_port": 22,
            "id": "sgrule-1939888492",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01a17992916c70494",
            "security_group_rule_id": "sgr-0b515c5309f6b7379",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.bastion_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_security_group_rule_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Bastion Server to kubernetes",
            "from_port": 22,
            "id": "sgrule-1233334697",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01a17992916c70494",
            "security_group_rule_id": "sgr-0c2f1796a11e247fe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.bastion_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-rule01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1957937829",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf43d60646f220a",
            "security_group_rule_id": "sgr-0ed76ee720b1617c4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-rule02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.16.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1899343186",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf43d60646f220a",
            "security_group_rule_id": "sgr-0b1d6bf6b5caffaa7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-rule03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 6443,
            "id": "sgrule-2111170598",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf43d60646f220a",
            "security_group_rule_id": "sgr-004c40fcb3aae830f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-rule04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.16.0.0/16"
            ],
            "description": null,
            "from_port": 10250,
            "id": "sgrule-1462409832",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf43d60646f220a",
            "security_group_rule_id": "sgr-047c3fc1373f39281",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-rule05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-129903361",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf43d60646f220a",
            "security_group_rule_id": "sgr-01c55009d0dd652b6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-worker-rule01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-423155481",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-032395c8253214a0e",
            "security_group_rule_id": "sgr-0cf398e470ecb71db",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.worker_nodes_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-worker-rule02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2060542058",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-032395c8253214a0e",
            "security_group_rule_id": "sgr-0d121ad0c838b173c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.worker_nodes_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "etcd-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "etcd server client API",
            "from_port": 2379,
            "id": "sgrule-368509786",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf43d60646f220a",
            "security_group_rule_id": "sgr-09c6799456f4820fd",
            "self": false,
            "source_security_group_id": "sg-00cf43d60646f220a",
            "timeouts": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kube-controller-manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "kube-controller-manager",
            "from_port": 10257,
            "id": "sgrule-1666156684",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf43d60646f220a",
            "security_group_rule_id": "sgr-0cab6472438acc975",
            "self": false,
            "source_security_group_id": "sg-00cf43d60646f220a",
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kube-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "kube-proxy",
            "from_port": 10256,
            "id": "sgrule-16883185",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-032395c8253214a0e",
            "security_group_rule_id": "sgr-054140c21aaaef4ee",
            "self": false,
            "source_security_group_id": "sg-032395c8253214a0e",
            "timeouts": null,
            "to_port": 10256,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.worker_nodes_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kube-scheduler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "kube-scheduler",
            "from_port": 10259,
            "id": "sgrule-1547441137",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf43d60646f220a",
            "security_group_rule_id": "sgr-0ae7df71806753fd5",
            "self": false,
            "source_security_group_id": "sg-00cf43d60646f220a",
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "NodePort Services",
            "from_port": 30000,
            "id": "sgrule-1673874956",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-032395c8253214a0e",
            "security_group_rule_id": "sgr-06fbd2e48929ad4bc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.worker_nodes_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-from-bastion-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH from bastion",
            "from_port": 22,
            "id": "sgrule-445014529",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00cf43d60646f220a",
            "security_group_rule_id": "sgr-0e8e920210eb7173e",
            "self": false,
            "source_security_group_id": "sg-01a17992916c70494",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.bastion_security_group",
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker-kubelet-API",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kubelet API",
            "from_port": 10250,
            "id": "sgrule-1494341665",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-032395c8253214a0e",
            "security_group_rule_id": "sgr-0b1205f69c56c4f81",
            "self": false,
            "source_security_group_id": "sg-00cf43d60646f220a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_security_group.master_node_security_group",
            "module.deploy_kubernetes_infraestructure.aws_security_group.worker_nodes_security_group",
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640109666574:subnet/subnet-0ac01f53aec2fed61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac01f53aec2fed61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640109666574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privsubnet_terraform"
            },
            "tags_all": {
              "Name": "privsubnet_terraform"
            },
            "vpc_id": "vpc-06b98c1cea77c0466"
          },
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc",
            "module.deploy_kubernetes_infraestructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsunet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640109666574:subnet/subnet-078d614c7c35fe8b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078d614c7c35fe8b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640109666574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsunet_terraform"
            },
            "tags_all": {
              "Name": "pubsunet_terraform"
            },
            "vpc_id": "vpc-06b98c1cea77c0466"
          },
          "dependencies": [
            "module.deploy_kubernetes_infraestructure.aws_vpc.main_vpc",
            "module.deploy_kubernetes_infraestructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_kubernetes_infraestructure",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640109666574:vpc/vpc-06b98c1cea77c0466",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-086505ab16c865f75",
            "default_route_table_id": "rtb-05e2a459d08bc2780",
            "default_security_group_id": "sg-02128c73a01bd0373",
            "dhcp_options_id": "dopt-0a52a1e0da975a30c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b98c1cea77c0466",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e2a459d08bc2780",
            "owner_id": "640109666574",
            "tags": {
              "Name": "vpc_terraform"
            },
            "tags_all": {
              "Name": "vpc_terraform"
            }
          }
        }
      ]
    }
  ]
}